# depthai2

./: ActionDecider.cpp  ActionDecider.h  CMakeLists.txt  DepthProcessor.cpp  DepthProcessor.h  PipelineManager.cpp  PipelineManager.h  main.cpp
